--- a/thesis/Intro/acknowledgement.tex
+++ b/thesis/Intro/acknowledgement.tex
@@ -2,9 +2,31 @@
 
 \begin{acknowledgements}      
 
-
-Christiaan Baaij - making C\textlambda aSH
-
-
+Christiaan Baaij - making \clash{} and answering questions
+Jan Kuper
+Rinse Wester
+Ruud van Damme
+Jan Broenink 
 
 \end{acknowledgements}
+
+
+
+\begin{acronyms}
+\begin{tabular}{>{\bfseries}l l}
+	ASIC & Application-specific integrated circuit \\
+	FPGA & Field-Programmable Gate Array \\
+	CPU & Central Processing Unit \\
+	GPU & Graphics Processing Unit \\
+	GPGPU & General Purpose GPU \\
+	DSP & Digital Signal Processing \\
+	LED & Light Emitting Diode \\
+	VHDL & VHSIC HDL \\
+	VHSIC & Very High Speed Integrated Circuit \\
+	HDL & Hardware Description Language
+	SoC & System-on-Chip \\ 
+	ODE & Ordinary Differential Equation \\
+\end{tabular}		
+\end{acronyms}    
+
+  
