--- a/thesis/Intro/acronyms.tex
+++ b/thesis/Intro/acronyms.tex
@@ -1,7 +1,8 @@
-\begin{acknowledgements}
+
+\begin{acronyms}
 	\begin{tabular}{ccc}
 		first row & & \\
 		second row & & \\
 		and & so & on \\
 	\end{tabular}		
-\end{acknowledgements}      
+\end{acronyms}    
