--- a/thesis/Intro/preamble.tex
+++ b/thesis/Intro/preamble.tex
@@ -158,7 +158,7 @@
 
 \newenvironment{itemizens}
 { 
-	\vspace{-0.5\topsep}
+	\vspace{-\topsep}
 	\begin{itemize}
 	\setlength{\itemsep}{0pt}
 	\setlength{\parskip}{0pt}
@@ -170,7 +170,7 @@
 
 \newenvironment{enumeratens}
 {
-	\vspace{-0.5\topsep}
+	\vspace{-\topsep}
 	\begin{enumerate}
 	\setlength{\itemsep}{0pt}
 	\setlength{\parskip}{0pt}
