--- a/thesis/References/references.bib
+++ b/thesis/References/references.bib
@@ -2,10 +2,49 @@
 	title = {Computer Language Benchmarks Game},
 	howpublished = "\url{http://benchmarksgame.alioth.debian.org/u32q/which-programs-are-fastest.html}",
 	year = {2015}, 
-	note = "[Accessed: ]"
+	note = "[Accessed: June 2015]"
 }
-
-
+@article{FPGAvsCPU,
+	author = {Underwood, Keith},
+	journal = {Association for Computing Machinery},
+	title = {FPGAs vs. CPUs: Trends in Peak Floating-Point Performance},
+	url = {http://home.engineering.iastate.edu/~zambreno/classes/cpre583/2006/documents/Und04A.pdf},
+	year = {2004}
+}
+@misc{FPGAvsASIC,
+	title = {Mining hardware comparison},
+	howpublished = "\url{https://en.bitcoin.it/wiki/Mining_hardware_comparison}",
+	year = {2015}, 
+	note = "[Accessed: June 2015]"
+}
+@BOOK{FPGAexplained,
+ author={Wolf, Wayne},
+ title={FPGA-Based System Design},
+ pages={576},
+ publisher={Prentice Hall},
+ address={Upper Saddle River, New Jersey},
+ year={2004},
+}
+@misc{SoCKit,
+	title = {SoCKit - the Development Kit for New SoC Device},
+	howpublished = "\url{http://www.terasic.com.tw/cgi-bin/page/archive.pl?Language=English&CategoryNo=&No=816}",
+	year = {2015}, 
+	note = "[Accessed: June 2015]"
+}
+@BOOK{DE,
+ author={Polking, J and Boggess, A and Arnold, D},
+ title={Differential Equations with Boundary Value Problems},
+ pages={703},
+ publisher={Prentice Hall},
+ address={Upper Saddle River, New Jersey},
+ year={2006},
+}
+@BOOK{FPintro,
+ author={Kuper, J},
+ title={A Short Introduction to Functional Programming},
+ pages={38},
+ year={2015},
+}
 
 % ------------------------------------------------------------------------
 % SAMPLE BIBLIOGRAPHY FILE
