--- a/thesis/thesis.tex
+++ b/thesis/thesis.tex
@@ -11,7 +11,7 @@
 % ******************************* PhD Thesis Template **************************
 % Please have a look at the README.md file for info on how to use the template
 
-\documentclass[a4paper,12pt,times,numbered,print,index]{Classes/PhDThesisPSnPDF}
+\documentclass[a4paper,12pt,times,numbered,print,index,chapter]{Classes/PhDThesisPSnPDF}
 
 % ******************************************************************************
 % ******************************* Class Options ********************************
@@ -109,7 +109,7 @@
 % Useful option to review a particular chapter or to send it to supervisior.
 % To use choose `chapter' option in the document class
 \ifdefineChapter
-	\includeonly{P1-Introduction/introduction,P2-Results/results,P3-Conclusion/conclusion,P4-Discussion/discussion}
+	\includeonly{P1-Introduction/introduction}
 \fi
 
 % ******************************** Front Matter ********************************
@@ -132,7 +132,7 @@
 \include{Intro/abstract}
 \include{Intro/acknowledgement}
 \tableofcontents
-\include{Intro/acronyms}
+
 %\listoffigures
 %\listoftables
 
@@ -180,7 +180,7 @@
 \include{Appendix/haskell_ode_source}
 \include{Appendix/toolchain_integration}
 \include{Appendix/toolchain_deployment}
-
+\include{Appendix/data_io}
 
 \end{appendices}
 
