check dit remco

--- a/thesis/Intro/acknowledgement.tex
+++ b/thesis/Intro/acknowledgement.tex
@@ -1,12 +1,12 @@
 % ************************** Thesis Acknowledgements **************************
 
 \begin{acknowledgements}      
-
-Christiaan Baaij - making \clash{} and answering questions
-Jan Kuper
-Rinse Wester
-Ruud van Damme
-Jan Broenink 
+\begin{itemizens}
+	\item Christiaan Baaij - making \clash{} and answering questions
+	\item Jan Kuper
+	\item Ruud van Damme
+	\item Jan Broenink
+\end{itemizens}
 
 \end{acknowledgements}
 
@@ -23,7 +23,7 @@ Jan Broenink
 	LED & Light Emitting Diode \\
 	VHDL & VHSIC HDL \\
 	VHSIC & Very High Speed Integrated Circuit \\
-	HDL & Hardware Description Language
+	HDL & Hardware Description Language \\
 	SoC & System-on-Chip \\ 
 	ODE & Ordinary Differential Equation \\
 \end{tabular}		
