--- a/thesis/thesis-info.tex
+++ b/thesis/thesis-info.tex
@@ -1,6 +1,6 @@
 % ************************ Thesis Information & Meta-data **********************
 %% The title of the thesis
-\title{Numerical mathematics on FPGAs using C\textlambda aSH}
+\title{Numerical mathematics on FPGAs using \clash{}}
 %\texorpdfstring is used for PDF metadata. Usage:
 %\texorpdfstring{LaTeX_Version}{PDF Version (non-latex)} eg.,
 %\texorpdfstring{$sigma$}{sigma}
@@ -38,7 +38,7 @@
 
 %% Submission date
 % Default is set as {\monthname[\the\month]\space\the\year}
-\degreedate{July 2015} 
+\degreedate{July 2\textsuperscript{nd}, 2015} 
 
 %% Meta information
 \subject{LaTeX} \keywords{{LaTeX} {PhD Thesis} {Engineering} {University of Cambridge}}
